Add patch for aruco to set c++11 flag

--- a/source.yml
+++ b/source.yml
@@ -306,10 +306,11 @@ version_control:
 
     - external/aruco:
       type: archive
-      url: http://sourceforge.net/projects/aruco/files/OldVersions/aruco-1.2.5.tgz
+      url: http://downloads.sourceforge.net/project/aruco/1.2.5/aruco-1.2.5.tgz
       patches:
          - $AUTOPROJ_SOURCE_DIR/patches/aruco_cmake.patch
          - $AUTOPROJ_SOURCE_DIR/patches/aruco_board_generation.patch
+         - $AUTOPROJ_SOURCE_DIR/patches/aruco.patch
 
 #    - planning/openrave:
 #      github: rdiankov/openrave
